Node-based textures produce artifacts in BI volumetrics #38578

Closed
opened 2014-02-10 19:24:14 +01:00 by Sam Brubaker · 8 comments

Version: 2.69 official (win 64)
VolumetricNodeTexture.blend
How to reproduce: Render the scene. Notice that the volumetric spheres on the left are clean, whereas their identical counterparts on the right have noisy artifacts. The only difference between them is that the left spheres use a regular procedural texture in the stack, and the right spheres use that very same texture, but in a node tree. The problem persists whether the color ramp is used inside or outside the node tree.

This is not correct; the density of the volumetric material should be zero in the negative areas of the texture. There shouldn't be any noise there at all.

Weirder still, the noise seems to be influenced somehow by the tiles? See the lower right corner of my render:Render.png

Version: 2.69 official (win 64) [VolumetricNodeTexture.blend](https://archive.blender.org/developer/F76753/VolumetricNodeTexture.blend) How to reproduce: Render the scene. Notice that the volumetric spheres on the left are clean, whereas their identical counterparts on the right have noisy artifacts. The only difference between them is that the left spheres use a regular procedural texture in the stack, and the right spheres use that very same texture, but in a node tree. The problem persists whether the color ramp is used inside or outside the node tree. This is not correct; the density of the volumetric material should be zero in the negative areas of the texture. There shouldn't be any noise there at all. Weirder still, the noise seems to be influenced somehow by the tiles? See the lower right corner of my render:![Render.png](https://archive.blender.org/developer/F76751/Render.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Brecht Van Lommel was assigned by Sergey Sharybin 2014-02-11 09:33:56 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by blender/blender-addons-contrib@5af3b02f72

This issue was referenced by blender/blender-addons-contrib@5af3b02f72e74c0ed05851d7c38775c042b45b1a

This issue was referenced by 5af3b02f72

This issue was referenced by 5af3b02f72e74c0ed05851d7c38775c042b45b1a

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5af3b02f72.

Closed by commit 5af3b02f72.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38578
No description provided.