Fix T38578: blender internal texture nodes + volume render error.